feat!: integrate tiler into server